# Esercitazioni_PCS_2026

./: prova.txt
ProgettoFinale/: CMakeLists.txt  circuito.txt  component.hpp  cycles.hpp  gradiente_coniugato.hpp  lifofifo.hpp  main.cpp  netlist.hpp  solver.hpp  test_cycles.cpp  test_gradiente.cpp  test_lifofifo.cpp  test_matrici.cpp  test_netlist.cpp  test_solver.cpp  timecounter.h  undirected_edge.hpp  undirected_graph.hpp
esercitazione1/: CMakeLists.txt  medie.cpp  prog
esercitazione1/build_es1/: CMakeCache.txt  Makefile  cmake_install.cmake  esercitazione1
esercitazione10/: CMakeLists.txt  GC.hpp  main.cpp
esercitazione2/: CMakeLists.txt  es1.cpp  es2.cpp  es_facoltativo.cpp
esercitazione3/: CMakeLists.txt  main.cpp
esercitazione4/: CMakeLists.txt  confronto_tempi.cpp  ordinamento.hpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  confronto_tempi.cpp  delta_times.cpp  ordinamento.hpp  osservazioni.txt  test_bubblesort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_strings.cpp
esercitazione8/: CMakeLists.txt  graphs.hpp  graphtest.cpp  main.cpp
esercitazione9/: CMakeLists.txt  grafi.hpp  grafodot.hpp  lifofifo.hpp  main.cpp  visite.hpp
